alignment issues

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -85,3 +85,4 @@
 span#current_week_day{font-size: 16px;color: #dd4814;}
 
 .star{padding-left: 56px;}
+.prod_star{padding-left: 140px;}
